--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,3 +31,7 @@ setw -g pane-active-border-style fg=#C01A0A,bg=default
 # status bar
 set-option -g status-style fg=#EB1C07,bg=#1f1f2c
 set-option -g status-right "[#h]  %Y-%m-%d, %H:%M"
+
+
+# plugins
+run-shell "~/.config/tmux/plugins/tmux-resurrect/resurrect.tmux"
